# llvm-support-minimal

./: CMakeLists.txt  README.md
include/llvm/ADT/: ArrayRef.h  MapVector.h  SmallVector.h
include/llvm/Config/: llvm-config.h
include/llvm/Support/: ConvertUTF.h  ErrorHandling.h  JSON.h  SwapByteOrder.h
lib/: CMakeLists.txt  llvm-supportConfig.cmake.in
lib/Support/: CMakeLists.txt  ConvertUTFWrapper.cpp  ErrorHandling.cpp  JSON.cpp  SmallVector.cpp
tests/: CMakeLists.txt
tests/ADT/: ArrayRefTest.cpp  MapVectorTest.cpp
tests/Support/: CMakeLists.txt  JSONTest.cpp
